--- a/src/static/css/common.css
+++ b/src/static/css/common.css
@@ -31,7 +31,7 @@ img{
     height: 320px;
     position: absolute;
     z-index: 1;
-    transition: all .6s ;
+    transition: all 1s ;
 }
 .photo .side{
     width: 100%;
@@ -79,7 +79,7 @@ img{
     height: 100%;
     box-shadow: 0 0 8px 2px rgba(0, 0, 0, .7);
     transform-style: preserve-3d;
-    transition: all .6s;
+    transition: all 1s;
     transform-origin: 0% 50%;
 }
 
@@ -110,7 +110,7 @@ img{
     text-align: center;
     border-radius: 50%;
     transform: scale(.48);
-    transition: all .5s ;
+    transition: all .9s ;
 }
 .nav .i-current{
     transform: scale(1);
